[package]
name = "amethyst_fmod"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmod-sys = { git = "https://github.com/wingertge/fmod-sys", features = ["studio"] }
amethyst = "0.15"
log = "0.4"

[dev-dependencies.amethyst]
version = "0.15"
features = ["empty"]