[package]
name = "amethyst_fmod"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmod-sys = { git = "https://github.com/wingertge/fmod-sys", features = ["studio"] }
log = "0.4"

[dependencies.legion]
git = "https://github.com/TomGillen/legion"
rev = "b93b636d"
default-features = false
features = ["serialize", "crossbeam-events", "codegen"]

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst.git"
branch = "legion_v2"
# path = "../../amethyst"

[dev-dependencies.amethyst]
git = "https://github.com/amethyst/amethyst.git"
branch = "legion_v2"
# path = "../../amethyst"
features = ["empty"]